# tiny-kube

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/tinykube/: node_registry.hpp  time.hpp  types.hpp
proto/: control_plane.proto
src/agent/: main.cpp
src/control/: main.cpp
